@@ -3,6 +3,7 @@ abstract: 'Plack env dump application.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  CPAN::Version: 0
   Error::Pure: 0
   ExtUtils::MakeMaker: 6.59
   File::Object: 0
