@@ -23,6 +23,7 @@ requires 'Plack::Component' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Plack-App-Env/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Plack-App-Env';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Plack-App-Env';
+test_requires 'CPAN::Version' => 0;
 test_requires 'Error::Pure' => 0;
 test_requires 'File::Object' => 0;
 test_requires 'Test::More' => 0;
