@@ -1,4 +1,5 @@
 0.06
+ - Fix test for development version of Data::Printer.
 
 0.05 2020-11-02T13:54:26+01:00
  - Fix test »REMOTE_ADDR "127.0.0.1" (dualvar: 127),« on FreeBSD.
